--- a/attendance/templates/user_module/staff_detail.html
+++ b/attendance/templates/user_module/staff_detail.html
@@ -100,7 +100,7 @@
 				<button type="button" class="close btn-cust pr-4 pt-4" data-dismiss="modal">&times;</button>
 			</div>
 			<div class="modal-body pt-0">
-				<form class="edit_form" method="POST" id="staff_update_form">
+				<form class="form edit_form" method="POST" id="staff_update_form" novalidate>
 					{% csrf_token %}
 					{{ form|crispy }}
 				</form>
@@ -109,8 +109,9 @@
 				<div class="col-12 d-flex justify-content-end">
 					<input type="submit" value="Update" name="submit" form="staff_update_form"
 						class="btn border_white btn-cust neu_icon text-success align-self-center mr-2">
-					<button class="btn border_white btn-cust neu_icon text-warning align-self-center ml-2"
-						data-dismiss="modal" type="button">Cancel</button>
+					<a href="{% url 'staff_detail' staff.id %}"
+						class="btn border_white btn-cust neu_icon text-warning align-self-center ml-2"
+						data-dismiss="modal" type="button">Cancel</a>
 				</div>
 			</div>
 		</div>
@@ -119,6 +120,12 @@
 
 <script type="text/javascript">
 	$(document).ready(function () {
+
+		{% if form.errors %}
+		$("#edit_staff_detail").modal({ backdrop: 'static' });
+		$("#edit_staff_detail").modal('show');
+		{% endif %}
+
 		var $window = $(window), $html = $('html');
 
 		$window.resize(function resize() {
@@ -132,10 +139,6 @@
 				$("#tab_res").css("width", "95%");
 			}
 		}).trigger('resize');
-
-		{% if form.errors %}
-		$('#staff_signup').modal()
-		{% endif %}
 
 	});
 </script>
