edit subject is added.
Now the tutor and hod can edit the subject.

--- a/attendance/templates/subject/subject_list.html
+++ b/attendance/templates/subject/subject_list.html
@@ -43,6 +43,9 @@
 			</h6>
 		</div>
 	</section>
+	{% if request.user.is_hod or sub.classroom.tutor == request.user %}
+		<a href="{% url 'subject:edit_subject' sub.id %}">Edit</a>
+	{% endif %}
 	{% endfor %}
 </article>
 
