--- a/attendance/templates/subject/subject_list.html
+++ b/attendance/templates/subject/subject_list.html
@@ -45,6 +45,7 @@
 	</section>
 	{% if request.user.is_hod or sub.classroom.tutor == request.user %}
 		<a href="{% url 'subject:edit_subject' sub.id %}">Edit</a>
+		<a href="{% url 'subject:delete_subject' sub.id %}">Delete</a>
 	{% endif %}
 	{% endfor %}
 </article>
