subject detail view is added.

--- a/attendance/templates/subject/subject_detail.html
+++ b/attendance/templates/subject/subject_detail.html
@@ -5,6 +5,13 @@
 <section class="container">
 	<h2 class="text-center my-3">Subject Detail Page</h2>
 
+	<ul>
+		<li> Hour name : {{ subject.hour_name }} </li>
+		<li> Subject name : {{ subject.sub_name }} </li>
+		<li> Subject type : {{ subject.sub_type }} </li>
+		<li> Handled By : {{ subject.handled_by }}</li>
+	</ul>
+
 	
 </section>
 
