--- a/attendance/templates/timetable/showsubjects.html
+++ b/attendance/templates/timetable/showsubjects.html
@@ -19,54 +19,28 @@
             </tr>
         </thead>
         <tbody>
-            {% for i in days %}
+            {% for i,days in all_subjects %}
             <tr>
-                <th> {{i}} </th>
-                
-                <td id="{{forloop.counter}}1">{% for j in setsubjects %}
-                    {% if j.day == forloop.parentloop.counter and j.hour == 1 %}
-                    <p>{{j.subject.sub_name}}</p>
-                    {% endif %}
-                    {% endfor %}
-                </td>
-                <td id="{{forloop.counter}}2">
-                    {% for j in setsubjects %}
-                    {% if j.day == forloop.parentloop.counter and j.hour == 2 %}
-                    <p>{{j.subject.sub_name}}</p>
-                    {% endif %}
-                    {% endfor %}
-                </td>
-                <td id="{{forloop.counter}}3">{% for j in setsubjects %}
-                    {% if j.day == forloop.parentloop.counter and j.hour == 3 %}
-                    <p>{{j.subject.sub_name}}</p>
-                    {% endif %}
-                    {% endfor %}
-                </td>
-                <td id="{{forloop.counter}}4">{% for j in setsubjects %}
-                    {% if j.day == forloop.parentloop.counter and j.hour == 4 %}
-                    <p>{{j.subject.sub_name}}</p>
-                    {% endif %}
-                    {% endfor %}
-                </td>
-                <td id="{{forloop.counter}}5">{% for j in setsubjects %}
-                    {% if j.day == forloop.parentloop.counter and j.hour == 5 %}
-                    <p>{{j.subject.sub_name}}</p>
-                    {% endif %}
-                    {% endfor %}
-                </td> 
-                
+                <th>{{days}}</th>
+                {% for j in i %}
+                    <td id="{{forloop.parentloop.counter}}{{forloop.counter}}">{{j}}</td>
+                {% endfor %}
             </tr>
             {% endfor %}
         </tbody>
     </table>
-    <div class="modal">
+    <div class="modal" id="timetable_modal">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <h4>Create/Edit a subject</h4>
                 </div>
                 <div class="modal-body">
-                    
+                    <form method="POST" action="#">
+                        {% csrf_token %}
+                        {{t_form_object.as_p}}
+                        <input type="submit" value="Submit">
+                    </form>
                 </div>
             </div>
         </div>
@@ -75,13 +49,19 @@
     <script>
         $(document).ready(function(){
             $("td").click(function(){
-               var a=$(this).find('p')
-               if(a.length>0){
-                   a=$(this).attr('id')
-                   var day=a[0]
-                   var hour=a[0]
-
-               }
+                var hour=$(this).attr('id')
+                var day=hour[0]
+                hour=hour[1]
+                $("#id_day").val(day)
+                //Here day and hour are strings but the options are integers.Here implicit type conversion is performed to convert string to integer
+                $("#id_hour").val(hour) 
+                var a=$(this).text()
+                if(a != "Free"){
+                   var subject=$(this).text()
+                   console.log(subject)
+                   $("#id_subject").val(subject)
+                }
+                $("#timetable_modal").modal('show')
             })
         })
     </script>
