60 students accounts are created.
some bugs in the attendance.html and classes.html are fixed.

--- a/attendance/templates/attendancess/attendance.html
+++ b/attendance/templates/attendancess/attendance.html
@@ -115,6 +115,7 @@
 
         $('#confirm-modal-button').on('click', function () {
             string = "<strong>Absentees&nbsp;:</strong>&nbsp;<label class='h5 text-danger font-weight-bold'>" + absentees.length + "</label>";
+            absentees.sort();
             for (i = 0; i < absentees.length; i++) {
                 string += "<h5 class='mb-1 pl-5'>" + absentees[i] + "</h5>";
             }
