--- a/attendance/templates/attendancess/classes.html
+++ b/attendance/templates/attendancess/classes.html
@@ -39,7 +39,7 @@
         </div>
         <div class="card-footer border_color_white bg-transparent text-center text_d_blue py-3">
             <h2 class="text-body float-left font_size_normal mb-0">
-                {{class.hour}}
+                {{class.get_hour_display}} hour
             </h2>
             {% if isPosted %}
             <span class="badge badge_box_shadow border_white text-success float-right">Finished</span>
