date is added in attendance report page.

--- a/attendance/templates/attendancess/check_attendance.html
+++ b/attendance/templates/attendancess/check_attendance.html
@@ -20,7 +20,7 @@
 {% block content %}
 <section class="text-center text_d_blue arvo mt-2 mb-3 mt-md-0" style="margin-bottom: 35px;">
     <h1>Attendance Report</h1>
-    <small class="upper_case text-body">for {{ attendance_id.date }}</small>
+    <small class="upper_case text-body">for {{ date }}</small>
 </section>
 <section class="pl-md-5 d-flex flex-column flex-md-row pt-md-2">
     <h5 class="text-muted d-none d-md-flex justify-content-center justify-content-md-start">
