--- a/attendance/templates/attendancess/attendance.html
+++ b/attendance/templates/attendancess/attendance.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-<title>SAMS | Attendance | Status of the Student</title>
+<title>SAMS | Attendance Entry</title>
 {% endblock %}
 
 {% block head %}
@@ -22,7 +22,8 @@
 
 {% block content %}
 <section class="text-center text_d_blue arvo mt-2 mb-3 mt-md-0" style="margin-bottom: 35px;">
-    <h1>Attendance {{date}}</h1>
+    <h1>Attendance Entry</h1>
+    <small class="upper_case text-body">{{ date }}</small>
 </section>
 <section class="pl-md-4 d-flex flex-column flex-md-row pt-md-2">
     <h5 class="text-muted d-none d-md-flex justify-content-center justify-content-md-start">
