--- a/attendance/templates/attendancess/check_attendance.html
+++ b/attendance/templates/attendancess/check_attendance.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-<title>SAMS | Attendance | Checking Student Attendance</title>
+<title>SAMS | Attendance | Attendance Report</title>
 {% endblock %}
 
 {% block head %}
