--- a/attendance/templates/timetable/setchoose.html
+++ b/attendance/templates/timetable/setchoose.html
@@ -8,12 +8,12 @@
 
 {% block content %}
 <h5>You are in the classroom : <a href="{% url 'classroom:editclass' c_object.id %}">{{c_object}}</a> </h5>
-<form method="POST" action="{% url 'timetable:showsubjects' c_object.id %}">
-    {% csrf_token %}
-     <label for="set_choose">Choose the set for the timetable</label>
-     {{t_set_choose.setchoose}}
-     <input type="submit" value="Submit">
-</form>
+<ul>
+<h4>The sets for the particular class : </h4>
+{% for i in t_set_particular %}
+    <li><a href="{% url 'timetable:showsubjects' c_object.id i.id %}">{{i}}</a></li>
+{% endfor %}
+</ul>
 <a href="{% url 'timetable:createtimetableset' c_object.id %}">{{t_set_choose.setchoose.help_text}}</a>
 {% endblock %}
 <!--Guys don't display it as a form just display it as a field so that it won't display help_text twice as i have used outside of the form-->
