Optimized Code in forms.py
Instead of overriding forms field most of it changed by update the field in forms.py

--- a/attendance/static/scss/style.scss
+++ b/attendance/static/scss/style.scss
@@ -68,6 +68,10 @@ body {
     padding: 10px 0px 0px 15px;
 }
 
+.form-text{
+    padding: 10px 0px 0px 15px;
+}
+
 /* Custom Button */
 /* Mainly for Hamburger Button */
 
