--- a/attendance/templates/classroom/view_and_create_classroom.html
+++ b/attendance/templates/classroom/view_and_create_classroom.html
@@ -132,7 +132,8 @@
 
     <form class="form" method="POST" action="{% url 'classroom:createclass' %}" novalidate>
         <!--Modal to display create class form-->
-        <div class="modal fade" id="create-class-modal">
+        <div class="modal fade" id="create-class-modal" data-backdrop="static" data-keyboard="false" tabindex="-1"
+            aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content border_white modal_box_shadow">
                     <div class="modal-header ml-1 text_d_blue border_color_white">
