--- a/attendance/templates/user_module/createstaff.html
+++ b/attendance/templates/user_module/createstaff.html
@@ -22,7 +22,7 @@
 	<div class="text-center text_d_blue arvo my-4">
 		<h3 class="m-0">Staff&nbsp;Creation&nbsp;Form</h3>
 	</div>
-	<form method="POST" class="needs-validation" novalidate>
+	<form method="POST" class="needs-validation" autocomplete="off" novalidate>
 		{% csrf_token %}
 		<div class="form-row" id="create_staff">
 			<div class="form-group col-md-12">
