--- a/attendance/templates/user_module/staff_detail.html
+++ b/attendance/templates/user_module/staff_detail.html
@@ -92,7 +92,8 @@
 </section>
 
 <!-- Staff Update Modal Form -->
-<div class="modal fade" id="edit_staff_detail">
+<div class="modal fade" id="edit_staff_detail" data-backdrop="static" data-keyboard="false" tabindex="-1"
+	aria-hidden="true">
 	<div class="modal-dialog modal-dialog-centered">
 		<div class="modal-content border_white modal_box_shadow">
 			<div class="modal-header ml-1 text_d_blue border_color_white">
