--- a/attendance/templates/user_module/my_account.html
+++ b/attendance/templates/user_module/my_account.html
@@ -3,40 +3,32 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-    <h1>Welcome to my account page!!!</h1>
-    <ul>
-        <li>Username : {{user.username}}</li>
-        <li>Email : {{user.email|default:'NA'}}</li>
-        <li>First name : {{user.first_name|default:'NA'}}</li>
-        <li>Last name : {{user.last_name|default:'NA'}}</li>
-    </ul>
-    <button type="button" data-toggle="modal" data-target="#edit-data" class="btn btn-primary">Edit</button>
-    <!-- The Modal -->
-    <div class="modal" id="edit-data">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <form method="POST" action="{% url 'account_edit' request.user.id %}">
-                    {% csrf_token %}
-        
-                <!-- Modal Header -->
-                <div class="modal-header">
-                <h4 class="modal-title">edit data</h4>
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-        
-                <!-- Modal body -->
-                <div class="modal-body">
-                    {{form|crispy}}
-                </div>
-        
-                <!-- Modal footer -->
-                <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                <input type="submit" value="Save">
-                </form>
-                </div>
-        
-            </div>
+<div class="row d-flex justify-content-center align-items-center m-3 m-md-0">
+    <div class="container col-lg-8 col-xl-6 body_box_shadow border_white p-4 mx-md-3">
+        <div class="text-center text_d_blue arvo my-4 mt-md-0 mb-md-4">
+            <h3 class="m-0">Edit&nbsp;Account</h3>
         </div>
+        <form class="form form-row edit_form needs-validation" action="{% url 'account_edit' request.user.id %}"
+            method="POST" id="account_update_form">
+            {% csrf_token %}
+            <div class="form-group col-md-12">
+                {{ form.username|as_crispy_field }}
+            </div>
+            <div class="form-group col-md-6">
+                {{ form.first_name|as_crispy_field }}
+            </div>
+            <div class="form-group col-md-6">
+                {{ form.last_name|as_crispy_field }}
+            </div>
+            <div class="form-group col-md-12">
+                {{ form.email|as_crispy_field }}
+            </div>
+            <div class="form-group col-md-12">
+                <button type="submit" form="account_update_form"
+                    class="btn border_white btn-cust neu_icon text-primary align-self-center float-right mr-3">Update</button>
+            </div>
+
+        </form>
     </div>
+</div>
 {% endblock %}
