--- a/attendance/static/css/style.css
+++ b/attendance/static/css/style.css
@@ -79,8 +79,8 @@ body {
 
 .btn-cust:focus {
   outline: none !important;
-  -webkit-box-shadow: inset 3px 3px 8px #c2d0db,  inset -3px -3px 8px #e5f6ff !important;
-          box-shadow: inset 3px 3px 8px #c2d0db,  inset -3px -3px 8px #e5f6ff !important;
+  -webkit-box-shadow: 5px 5px 10px #c2d0db,  -5px -5px 10px #e5f6ff;
+          box-shadow: 5px 5px 10px #c2d0db,  -5px -5px 10px #e5f6ff;
 }
 
 .btn-cust:active {
@@ -104,18 +104,24 @@ body {
 
 .cust_date:focus {
   outline: none !important;
-  -webkit-box-shadow: none !important;
-          box-shadow: none !important;
+  -webkit-box-shadow: 5px 5px 10px #c2d0db,  -5px -5px 10px #e5f6ff;
+          box-shadow: 5px 5px 10px #c2d0db,  -5px -5px 10px #e5f6ff;
+  border: 1px solid #c9d7e2;
+  cursor: pointer;
 }
 
 .cust_date:active {
   outline: #c9d7e2 !important;
+  border: 1px solid #c9d7e2;
+  cursor: pointer;
 }
 
 .cust_date:hover {
   color: #062743;
   -webkit-box-shadow: 5px 5px 10px #c2d0db,  -5px -5px 10px #e5f6ff;
           box-shadow: 5px 5px 10px #c2d0db,  -5px -5px 10px #e5f6ff;
+  border: 1px solid #c9d7e2;
+  cursor: pointer;
 }
 
 /* Main Content */
