--- a/attendance/templates/timetable/showsubjects.html
+++ b/attendance/templates/timetable/showsubjects.html
@@ -29,7 +29,9 @@
             {% endfor %}
         </tbody>
     </table>
+    <h5>This timetable is valid from{{s_object.from_date}} to {{s_object.to_date}}</h5>
     <a href="{% url 'timetable:set_info' c_object.id s_object.id %}" class="btn btn-danger">Back</a>
+    <a href="{% url 'timetable:createtimetable' c_object.id s_object.id %}" class="btn btn-info">Add subjects for this timetable</a>
     <!--<div class="modal fade" id="timetable_modal">
         <div class="modal-dialog">
             <div class="modal-content">
