--- a/attendance/templates/timetable/timetable.html
+++ b/attendance/templates/timetable/timetable.html
@@ -8,6 +8,9 @@
 
 {% block content %}
 <h5>You are in the classroom : <a href="{% url 'classroom:editclass' c_object.id %}">{{c_object}}</a> </h5>
+{% if No_subject %}
+    <h6>No subjects created yet for this classroom</h6>
+{% endif %}
 <form method="POST" action="{% url 'timetable:createtimetable' c_object.id set_id %}">
      {% csrf_token %}
      <div class="row mb-4">
@@ -16,8 +19,6 @@
            </div>
            <div class="col-5">
                 {{t.set_name}}
-                {{t.set_name.help_text}}
-                <a href="#" class="btn btn-info float-right">Create a new set</a>
            </div>
      </div>
      <div class="row mb-5">
@@ -74,7 +75,8 @@
      <div class="row">
           <div class="col-8">
                <input type="submit" class="btn btn-success float-right" value="Save and continue">
-               <a href="{% url 'timetable:setchoose' c_object.id %}" class="btn btn-danger">Back</a>
+               <a href="{% url 'timetable:set_info' c_object.id set_id %}" class="btn btn-danger">Back</a>
+               <a href="{% url 'timetable:showsubjects' c_object.id set_id %}" class="btn btn-info">View Timetable</a>
           </div>
      </div>
 </form>
